Thinking in streams session 1 : final code